# icon-detection-and-automation

./: README.md  icon_detector_final.ipynb  main.py  pyproject.toml  requirements.txt
